committed updated files

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,10 @@
             font-size: 18px;
         }
         p{
-            color: #faffff;
+            color: #ffce27;
         }
         h2{
-            color: #F25F5C;
+            color: #f2743b;
             text-align: center;
         }
     </style>
